--- a/approach.html
+++ b/approach.html
@@ -62,11 +62,14 @@
                     <li>
                         <a href="services.html">Services</a>
                     </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
+                     <li>
+                        <a href="approach.html">Forms</a>
                     </li>
                     <li>
                         <a href="forms.html">Forms</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -81,19 +84,18 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>business casual</strong>
-                    </h2>
+                    <h2 class="intro-text text-center">My History</h2>
                     <hr>
                 </div>
-                <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p>This is a great place to introduce your company or project and describe what you do.</p>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                </div>
+                    <p>Practicing psychology is one of my greatest pleasures and most fulfilling pursuits. I would like to share how my career started and the theoretical foundations of my work. </p>
+
+<p>Determining one’s career path usually involves starting out on a completely different road.  I chose the path that excited me, I excelled in and last, the one that feels most “home” to me.  That describes my career journey.   While I was in my nursing school, I much preferred the therapeutic conversations that I had with my patients over the direct medical care that I administered.  After much anxiety I changed my major and did my research.  I decided that I would  pursue a doctorate in psychology.  My dream was to develop a treatment program in which many people’s lives would be equipped with positive practical and meaningful coping skills that would allow them to live at their highest potential.  It would be based on strengths as opposed to weaknesses. 
+
+<p>More than thirty years have passed since this dream began.  You may wonder, to what extent does reality mirror my dream?   The answer is partly.  The vision I had for my future contributed only partly to  the forces that actually shaped my career and my life.  The older you are, the more you humbly realize the truth of this.  I am immeasurably grateful for my career.  I enjoyed a thriving practice in which other mental health providers and I served large numbers of people in the Tampa Bay area..  I have reached thousands of people with meaningful information about emotional, social, and spiritual health on the radio.  I currently have the privilege of serving Veterans at Bay Pines VA Health Care System.  I also train VA employees to be more effective health coaches and to connect better with each other and with Veterans. </p>
+
+<p>My small private practice is like coming home. I develop close relationships with my patients and utilize my experience, skills, knowledge and evidence based treatments to promote meaningful psychological and social healing. My patients are able to receive individualized care because I maintain a small practice which allows me to devote my very best to them. </p>
+
+<p>My psychotherapy practice is informed by an ever-growing body of literature that I continually refer to.  A variety of therapeutic approaches form the foundation of my work.  These include cognitive behavioral therapy, psychodynamic therapy, exposure response prevention, meditation/mindfulness, solution-focused therapy, and  systems theories, and imago therapy.  The art/science of psychotherapy calls for the practitioner to select the most relevant approach that will have the greatest positive impact on ones’ patient(s). The most important factor associated with success however is the trusting relationship between the therapist and the patient.</p>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -102,79 +104,50 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Offered
-                        <strong>Services</strong>
+                    <h2 class="intro-text text-center">My 
+                        <strong>Approaches</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Anxiety.jpg" alt="Flower with Bee">
-                    <h3>Anxiety</h3>
-                    <p>Experiencing anxiety is a natural part of life. When anxiety affects the quality of life of an adult or child or limits performance/potential , the earlier the intervention, the better the prognosis.  Dr. Palcan provides assistance with these and other anxiety issues: 
-                        <br>a.	Generalized Anxiety
-                        <br>	b.	Panic Attacks
-                        <br>	c.	Phobias
-                        <br>	d.	Social Anxiety
-                        <br>	e.	School-related anxiety
-                        <br> 	f.	Obsessive Compulsive Disorder
-                        <br>	g.	Post Traumatic Stress Disorder</p>
+                    <h3>CBT</h3>
+                    <p>Cognitive behavioral therapy (CBT) is the most widely used and researched evidence based practice for treating psychological issues.  CBT focuses on developing personal coping strategies that target solving current problems and changing  thoughts, beliefs and attitudes.  It is problem focused, action-oriented. A basic principle of CBT is that thought distortions and maladaptive behaviors contribute to mental health problems and by identifying and replacing these distortions, one is able to reduce symptoms and associated distress. 
+</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Depression.jpg" alt="Crying Flower">
-                    <h3>Mood Disorders/Depression</h3>
-                    <p>All people experience depressive symptoms at some point in their lives which resolve with time.    However, depression and other mood disorder range from mild to severe in their impact upon your life.  Dr. Palcan assists people who experience depression due to grief/loss, medical issues, bipolar disorders and other life circumstances.  
-</p>
+                    <h3>Exposure Response Prevention</h3>
+                    <p>Exposure and response prevention (ERP) is a treatment method for a variety of anxiety disorders, especially obsessive compulsive disorder and phobias. The method is based on the idea that anxiety symptoms are reduced when individuals confront their fears and discontinue their escape response. An example: A person repeatedly washes her hands, believing that she has contaminated herself with with germs, after touching a doorknob. The person is exposed to their feared stimulus (touching a doorknob), and refuses to respond with any cleaning behavior. Exposure therapy for a  phobia calls for the refraining from the escape response at all times. Individuals experience habituation (a decrease/cease of responding to a feared stimulus (e.g. elevator) after repeated presentations) and also practice a fear-incompatible behavioral response he/she is exposed to the feared stimulus. Even though these strategies cause short-term anxiety, it results in a long-term reduction in obsessive and compulsive symptoms.</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Longterm Illness.jpg" alt="Archway">
-                    <h3>Coping with Medical Conditions</h3>
-                    <p>The most common health problems in the United States  like diabetes, heart disease, stroke, cancer, and arthritis and many other medical issues, require self management skills in order to live as fully as possible. Some such skills  include managing the difficult emotions associated with chronic conditions, dealing with pain and fatigue, decision making, communicating with your family and your medical team, and other skills.  Dr. Palcan offers individual sessions to assist clients to cope with medical conditions.  She is a Master Trainer of Stanford University’s Chronic Disease Self Management Program.
-</p>
+                    <h3>Psychodynamic Psychotherapy</h3>
+                    <p>The primary focus of this therapy is to reveal the unconscious material of our lives which negatively impact daily life. It is a more traditional, insight-oriented form of treatment which connects the origin of emotional distress of childhood family experiences to today’s experiences, attitudes, feelings and behaviors.  The therapist helps the client to process these insights within a supportive therapeutic relationship, by putting words to feelings, and by interpreting the causes of negative emotions.</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Medical and Psych.jpg" alt="Pond">
-                    <h3>Shared medical appointment for chronic and acute medical conditions</h3>
-                    <p>Drs. Palcan and Figueroa provide a dynamic and comprehensive group appointment that provides medical treatment  for both chronic and acute health conditions as well as the highest quality education and guidance in self management. comprehensive treatment  approach to address.</p>
+                    <h3>Meditation / Mindfulness</h3>
+                    <p> This ancient practice of calming the mind and body by focusing attention on one thing (e.g. breath, image, movement) and being fully in the present moment offers one of the healthiest canvas upon which to paint a healthy inner peace and awareness.  People from all walks of life and beliefs are able to experience the well researched benefits of meditation.  Stress management, pain management, substance abuse recovery, improvement in sleep, and even blood glucose levels result from a daily practice of meditation. 
+</p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Weight Loss.jpg" alt="Bridge">
-                    <h3>Weight Loss</h3>
-                    <p>Obesity is considered one of the most common chronic health conditions in the United States.  If an individual is 100 pounds overweight, his or her life expectancy is 10 years shorter.  Do the math for yourself, one year for every 10 pounds over weight. Dr. Palcan co-developed the MOVE! weight loss program at Bay Pines VA Medical Center and currently is the co-coordinator of the program.  She has been providing weight loss treatment in the civilian sector for years. In her private practice, outside of the VA,  she offers both individual and group weight loss treatment.  Along with the medical expertise of Dr. Figueroa, clients receive a comprehensive, psychological/medical treatment program that results in weight loss results.  
+                    <h3>Solutions Focused Therapy</h3>
+                    <p>Solution Focused Therapy is a goal-directed collaborative approach that involves direct observation of patient’s responses to a series of questions  that assess what patients want to achieve by exploring the history and origin of problem(s). Nevertheless, the majority of SF therapy sessions typically focus on the present and future.  
 </p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Smoking Cessation.jpg" alt="Clouds">
-                    <h3>Tobacco Cessation</h3>
-                    <p>Tobacco use is the number one cause of preventable death in the United States. The average smoker spends $250,000 over the course of his/her life. Nicotine addiction is one of the most challenging, if not, THE most challenging addictions to successfully eliminate.  As the Health Behavior Coordinator at Bay Pines VA Health Care System,  Dr. Roma Palcan is the developer and coordinator of the Tobacco Free Program.  Outside of the VA, she provides individual tobacco cessation treatment. Within four sessions, many clients are tobacco free. 
+                    <h3>Imago Therapy</h3>
+                    <p>Couples therapy is a challenging, but rewarding form of treatment. Imago therapy gives couples information and tools to make unconscious aspects of their relationship conscious, resolve conflict, meet each other’s needs, heal, and create emotional safety with each other.
 </p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Men's Issues.jpg" alt="Bamboo">
-                    <h3>Men's Issues</h3>
-                    <p> Men account for only one third of all who receive psychotherapy.  Why? Men are less likely to seek medical or psychological treatment.  They tend to wait for the situation to be more critical before reaching out.  Men perceive themselves as doers and are more likely to think that, “‘Talking about it won’t change anything!”. Dr. Palcan has specialized in men issues for more than 15 years. She co-hosted a daily live radio program “for men and the women who love them”.  She understands that men and women often have different needs, different ways of manifesting psychological stress and different preferences for solutions.   Dr. Palcan assists men with: career, relationships, psychological stress, addictions, and much more. Her approach is more solution-focused and involves skill building, and  active problem solving.
+                    <h3>Family Systems Therapy</h3>
+                    <p>This  goal of this approach is to gain insight into each member’s role as it relates to the healthy functionality of the whole family. Every family member is connected to each other through a system of relationships that can be identified  and observed by the therapist and family members. Participants are asked to demonstrate the roles they play in normal family life. Once these are recognized, family members begin to understand how their actions affect each other and adopt positive behaviors that benefit themselves and the family as a whole.
 </p>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/Adolescence.jpg" alt="Young Flower">
-                    <h3>Adolescence</h3>
-                    <p> Adolescence (12 - 18 years old) is a challenging stage of development, requiring sensitivity and patience. The physical change from child to adult, the transformation of the relationship between youth and parents, peer relationships, social media and the pressure to be perfect, romantic relationships, and navigating the many forks in the road involving leisure, values, and career/college choices mark the landscape, making this one of the most difficult terrains for the family.  Dr. Palcan is a safe adult presence that a teen is able to talk during the strained years of adolescence.  She has true empathy and excellent rapport with teens and is successful in building a bond with them.   She works with adolescents who experience self-destructive behavior, lying, cheating, academic problems, negative attitudes, sibling or peer problems, violent relationships, drugs and alcohol, depression/anxiety, and sexuality issues.   Dr. Palcan builds a bridge between parents and youth,  promoting understanding and communication that results in mutual respect.   </p>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/Couples Therapy.jpg" alt="Two Flowers">
-                    <h3>Relationship Therapy</h3>
-                    <p>All healthy relationships have their trials.  The sooner a couple seeks help, the better, however most are strained for 6 years before they seek counseling. Power struggles, communication problems, sexual dissatisfaction, parenting discrepancies and infidelity are some of  the most common problems that Dr. Palcan provides valuable assistance for.  Couples focus on their interaction as well as self-improvement and self-awareness.   They identify the areas of their relationship that require attention and strategically rebuild their relationship and strengthen motivation, trust, respect, intimacy, and communication . Premarital counseling is another service that Dr. Palcan offers to couples. 
-</p>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/Family Therapy.jpg" alt="Family of Flowers">
-                    <h3>Family Therapy</h3>
-                    <p>Family therapy is very helpful when the emotional health of the family is strained due to major life events or mental health conditions. Families seek counseling in order to generate understanding and solutions.  Divorce, behavioral/academic  issues, conflict, addictions, abuse, or the death or illness of a member often bring a family in for treatment with Dr. Palcan. Treatment promotes understanding and collaboration among family members.  It is solution-focused and promotes connection within the family. 
-</p>
-                </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="../img/Christian.jpg" alt="Waterfall">
-                    <h3>Christian Psychotherapy</h3>
-                    <p> Dr. Palcan provides psychotherapy services to individuals across the entire dimension of faith, from those who are not spiritually interest to those who are devout practitioners within a religious communities.  Dr. Palcan assess the spiritual world view of the individual and meets the person where he or she is, utilizing the person’s spiritual strengths for for psychological healing to the degree that the individual is interested.  Dr. Palcan is  specifically trained in the area of Christian Psychotherapy.  Thus, individuals who prefer actively incorporating Christian values and  principles within their treatment, may request this specificity and find great value in Dr. Palcan’s treatment.  She was a member of the Network of Christian Counseling Centers and co-hosted a live daily Christian radio program from her private practice which addressed numerous practical life issues. </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
