--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
+                   <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
@@ -64,11 +64,14 @@
                     <li>
                         <a href="services.html">Services</a>
                     </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
+                     <li>
+                        <a href="approach.html">Forms</a>
                     </li>
                     <li>
                         <a href="forms.html">Forms</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
