--- a/forms.html
+++ b/forms.html
@@ -62,11 +62,14 @@
                     <li>
                         <a href="services.html">Services</a>
                     </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
+                     <li>
+                        <a href="approach.html">Forms</a>
                     </li>
                     <li>
                         <a href="forms.html">Forms</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
