--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
                         <a href="services.html">Services</a>
                     </li>
                      <li>
-                        <a href="approach.html">Forms</a>
+                        <a href="approach.html">Approach</a>
                     </li>
                     <li>
                         <a href="forms.html">Forms</a>
