--- a/approach.html
+++ b/approach.html
@@ -48,7 +48,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Roma Palcan</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,7 +66,7 @@
                         <a href="approach.html">Forms</a>
                     </li>
                     <li>
-                        <a href="forms.html">Forms</a>
+                        <a href="forms.html">Approaches</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
