--- a/services.html
+++ b/services.html
@@ -104,9 +104,9 @@
                 </section>
                 <section class ="col-md-12 clearfix">
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Medical and Psych.jpg" alt="Pond">
-                        <h3>Shared medical appointment for chronic and acute medical conditions</h3>
-                        <p>Drs. Palcan and Figueroa provide a dynamic and comprehensive group appointment that provides medical treatment  for both chronic and acute health conditions as well as the highest quality education and guidance in self management. comprehensive treatment  approach to address.</p>
+                        <img class="img-responsive" src="../img/Family Therapy.jpg" alt="Family of Flowers">
+                        <h3>Family Therapy</h3>
+                        <p>Families seek counseling in order to generate understanding and solutions. Divorce, behavioral/academic issues, conflict, addictions, abuse, or the death or illness of a member often bring a family in for treatment with Dr. Palcan.</p>
                     </div>
                     <div class="col-sm-4 text-center">
                         <img class="img-responsive" src="../img/Weight Loss.jpg" alt="Bridge">
@@ -138,10 +138,9 @@
                 </section>
                 <section class ="col-md-12 clearfix">
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Family Therapy.jpg" alt="Family of Flowers">
-                        <h3>Family Therapy</h3>
-                        <p>Families seek counseling in order to generate understanding and solutions. Divorce, behavioral/academic issues, conflict, addictions, abuse, or the death or illness of a member often bring a family in for treatment with Dr. Palcan.
-    </p>
+                        <img class="img-responsive" src="../img/Medical and Psych.jpg" alt="Pond">
+                        <h3>Shared medical appointment for chronic and acute medical conditions</h3>
+                        <p>Drs. Palcan and Figueroa provide a dynamic and comprehensive group appointment that provides medical treatment  for both chronic and acute health conditions as well as the highest quality education and guidance in self management. comprehensive treatment  approach to address.</p>
                     </div>
                     <div class="col-sm-4 text-center">
                         <img class="img-responsive" src="../img/Christian.jpg" alt="Waterfall">
