--- a/services.html
+++ b/services.html
@@ -121,11 +121,6 @@
                 </section>
                 <section class ="col-md-12 clearfix">
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Men's Issues.jpg" alt="Bamboo">
-                        <h3>Men's Issues</h3>
-                        <p>Men and women often have different needs, different ways of manifesting psychological stress and different preferences for solutions. Dr. Palcan assists men with career problems, relationships, psychological stress, addictions, and much more. Her approach is more solution-focused and involves skill building, and  active problem solving.</p>
-                    </div>
-                    <div class="col-sm-4 text-center">
                         <img class="img-responsive" src="../img/Adolescence.jpg" alt="Young Flower">
                         <h3>Adolescence</h3>
                         <p>Dr. Palcan builds a bridge between parents and youth, promoting understanding and communication that results in mutual respect. She works with adolescents who experience self-destructive behavior, lying, cheating, academic problems, negative attitudes, sibling or peer problems, violent relationships, drugs and alcohol, depression/anxiety, and sexuality issues.</p>
@@ -135,10 +130,15 @@
                         <h3>Relationship Therapy</h3>
                         <p>All healthy relationships have their trials. Power struggles, communication problems, sexual dissatisfaction, parenting discrepancies, premarital counseling and infidelity are some of  the most common problems that Dr. Palcan provides valuable assistance for. Couples focus on their interaction as well as self-improvement and self-awareness.</p>
                     </div>
+                    <div class="col-sm-4 text-center">
+                        <img class="img-responsive" src="../img/Men's Issues.jpg" alt="Bamboo">
+                        <h3>Men's Issues</h3>
+                        <p>Men and women often have different needs, different ways of manifesting psychological stress and different preferences for solutions. Dr. Palcan assists men with career problems, relationships, psychological stress, addictions, and much more. Her approach is more solution-focused and involves skill building, and  active problem solving.</p>
+                    </div>
                 </section>
                 <section class ="col-md-12 clearfix">
                     <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="../img/Medical and Psych.jpg" alt="Pond">
+                        <img class="img-responsive" src="../img/Shared Medical Appointment.jpg" alt="Bush">
                         <h3>Shared medical appointment for chronic and acute medical conditions</h3>
                         <p>Drs. Palcan and Figueroa provide a dynamic and comprehensive group appointment that provides medical treatment  for both chronic and acute health conditions as well as the highest quality education and guidance in self management. comprehensive treatment  approach to address.</p>
                     </div>
