--- a/forms.html
+++ b/forms.html
@@ -88,13 +88,21 @@
                 </div>
                 <div class="col-md-12" style="text-align: center">
                     <p>Please fill out and bring to the office on your first visit.</p>
-                    <div style="width: 25%; margin-left: auto; margin-right: auto; text-align: left">
+                    <!--If you want this to be a bullet pointed list... do ul w/ li's <div style="width: 25%; margin-left: auto; margin-right: auto; text-align: left">-->
                     <ul>
-                       <li> <a href="officepolicies.pdf">Office Policies<a></li>
-                        <li><a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information<a></li> 
-                        <li><a href="Personal History Form_ Adult.pdf">Personal History Form</a></li>
-                    </ul>
-                    </div>
+                       <div class="col-md-4">
+                           <a href-"officepolicies.pdf"><img class="img-responsive" src="img/officepolicies.png"></a>
+                           <a href="officepolicies.pdf">Office Policies</a>
+                       </div>
+                       <div class="col-md-4">
+                           <a href-"privacyinformation.pdf"><img class="img-responsive" src="img/privacyinformationpicture.png"/></a>
+                           <a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information</a>
+                       </div>
+                       <div class="col-md-4">
+                            <a href-"Personal History Form_Adult.pdf"><img class="img-responsive" src="img/Personal History Form_Adult.png"/></a>
+                            <a href="Personal History Form_ Adult.pdf">Personal History Form</a></li>
+                       </div>
+                  <!--  </div>-->
                 </div>
                 <div class="clearfix"></div>
             </div>
