--- a/forms.html
+++ b/forms.html
@@ -86,20 +86,20 @@
                     </h2>
                     <hr>
                 </div>
-                <div class="col-md-12" style="text-align: center">
+                <div class="col-md-12 text-center" style="text-align: center">
                     <p>Please fill out and bring to the office on your first visit.</p>
                     <!--If you want this to be a bullet pointed list... do ul w/ li's <div style="width: 25%; margin-left: auto; margin-right: auto; text-align: left">-->
                     <ul>
-                       <div class="col-md-4">
-                           <a href-"officepolicies.pdf"><img class="img-responsive" src="img/officepolicies.png"></a>
+                       <div class="col-md-4" style = "padding: 15px;">
+                           <a href-"officepolicies.pdf"><img class="img-responsive" src="img/officepolicies.png" style = "padding-bottom: 10px;"></a>
                            <a href="officepolicies.pdf">Office Policies</a>
                        </div>
-                       <div class="col-md-4">
-                           <a href-"privacyinformation.pdf"><img class="img-responsive" src="img/privacyinformationpicture.png"/></a>
+                       <div class="col-md-4" style = "padding: 15px;">
+                           <a href-"privacyinformation.pdf"><img class="img-responsive" src="img/privacyinformationpicture.png" style = "padding-bottom: 10px;"/></a>
                            <a href="privacyinformation.pdf">H.I.P.P.A. Privacy Information</a>
                        </div>
-                       <div class="col-md-4">
-                            <a href-"Personal History Form_Adult.pdf"><img class="img-responsive" src="img/Personal History Form_ Adult.png"/></a>
+                       <div class="col-md-4" style = "padding: 15px;">
+                            <a href-"Personal History Form_Adult.pdf"><img class="img-responsive" src="img/Personal History Form_ Adult.png" style = "padding-bottom: 10px;"/></a>
                             <a href="Personal History Form_ Adult.pdf">Personal History Form</a></li>
                        </div>
                   <!--  </div>-->
