--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/Roma1.JPG" alt="Dr. Roma Palcan">
                     <hr class="visible-xs">
-                    <p>I am a licensed psychologist in St. Petersburg, Florida with over 20-years of psychological service to adults, couples, families and adolescents.   It is a privilege to assist you with your psychological and relationship stressors with the finest of evidence-based treatments.  Thank you for considering me in as you seek psychological service for yourself or your loved ones.</p>
+                    <p>I am a licensed psychologist in St. Petersburg, Florida with over 20-years of psychological service to adults, couples, families and adolescents. My small private practice is like coming home. I develop close relationships with my patients and utilize my experience, skills, knowledge and evidence based treatments to promote meaningful psychological and social healing.</p>
+                    <p>My patients are able to receive individualized care because I maintain a small practice which allows me to devote my very best to them.It is a privilege to assist you with your psychological and relationship stressors with the finest of evidence-based treatments. Thank you for considering me in as you seek psychological service for yourself or your loved ones.</p>
                 </div>
             </div>
         </div>
