--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                     </h2>
                     <hr>
                     <p>When it’s time to seek counsel and guidance from a trusted psychologist….</p>
-                    <p>Each person is equipped with many strengths that will get them through difficult times. When it seems like you have exhausted your ideas, a good psychologist provides new understanding, support, and  strategies to understanding yourself and others better and to build coping skills to deal with difficult emotions, relationships and life circumstances.  Take time for yourself and turn your circumstances around.  There is no better investment to make than to strengthen yourself.</p>
-                    <p>When selecting a psychologist, look for expertise, character, and good reputation.  Choose someone who you feel comfortable with and who is practiced and wise. Select someone who other psychologists and medical professionals trust with their own family and friends.  Trust Dr. Roma Palcan.</p>
+                    <p>Each person is equipped with many strengths that will get them through difficult times. When it seems like you have exhausted your ideas, a  psychologist provides new understanding, support, and strategies to understand yourself and others better and to build coping skills to deal with difficult emotions, relationships and life circumstances. Take time for yourself and turn your circumstances around. There is no better investment than  strengthening yourself.</p>
+                    <p>When selecting a psychologist, look for expertise, character, and good reputation. Choose someone who you feel comfortable with and who is practiced and wise. Select someone who other psychologists and medical professionals trust with their own family and friends. Trust Dr. Roma Palcan.</p>
                 </div>
             </div>
         </div>
